--- a/hugo.toml
+++ b/hugo.toml
@@ -205,9 +205,9 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
 
   # Social config about the author
   [params.social]
-    GitHub = "xxxx"
-    Linkedin = ""
-    Facebook = "xxxx"
+    GitHub = "https://github.com/dinhduc0605"
+    Linkedin = "https://www.linkedin.com/in/nguyen-dinh-duc-0605/"
+    Facebook = "https://www.facebook.com/dinhduc6594/"
     Email = "dinhduc0605@gmail.com"
 
   #  Page global config
