--- a/hugo.toml
+++ b/hugo.toml
@@ -1,10 +1,10 @@
-baseURL = "http://example.org/"
+baseURL = "https://nddblog.com/"
 
 # Change the default theme to be use when building the site with Hugo
 theme = "loveit"
 
 # website title
-title = "Nddblog"
+title = "NDDBlog"
 
 # language code ["en", "zh-CN", "fr", "pl", ...]
 languageCode = "en"
@@ -16,7 +16,7 @@ hasCJKLanguage = false
 # default amount of posts in each pages
 paginate = 12
 # google analytics code [UA-XXXXXXXX-X]
-googleAnalytics = ""
+googleAnalytics = "366011786"
 # copyright description used only for seo schema
 copyright = ""
 
@@ -70,18 +70,18 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
   # site default theme ["auto", "light", "dark"]
   defaultTheme = "auto"
   # public git repo url only then enableGitInfo is true
-  gitRepo = ""
+  gitRepo = "https://github.com/dinhduc0605/nddblog_hugo"
   #  which hash function used for SRI, when empty, no SRI is used
   # ["sha256", "sha384", "sha512", "md5"]
   fingerprint = ""
   #  date format
   dateFormat = "2006-01-02"
   # website title for Open Graph and Twitter Cards
-  title = "My cool site"
+  title = "NDDBlog"
   # website description for RSS, SEO, Open Graph and Twitter Cards
-  description = "This is my cool site"
+  description = "Những mẩu chuyện nhỏ của Đức"
   # website images for Open Graph and Twitter Cards
-  images = ["/logo.png"]
+  images = ["logo.png"]
 
   # Header config
   [params.header]
@@ -437,7 +437,7 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
     enable = false
     # Google Analytics
     [params.analytics.google]
-      id = ""
+      id = "366011786"
       # whether to anonymize IP
       anonymizeIP = true
     # Fathom Analytics
